feat: 주변 ACTIVE 게시물 검색 기능 구현
